# moe

./: .gitignore  .hlint.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  bangumi-hs.cabal  build.sh  moe.cabal  plan.md
app/: Main.hs
docs/: style.md
src/Effectful/: Sqlite.hs
src/Moe/: Environment.hs  Logging.hs
src/Moe/Model/Bangumi/: Types.hs
src/MoeWeb/: Routes.hs  Server.hs  Types.hs
src/MoeWeb/API/: Routes.hs  Server.hs
src/MoeWeb/API/Routes/: Bangumi.hs
src/MoeWeb/API/Server/: Bangumi.hs
